files/iptables/iptables
# Firewall rules copied across by ansible
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
# Catch-all, including NFS, but exclude ssh
-A INPUT -i virbr1 -p tcp --dport 22 -j REJECT
-A INPUT -i virbr1 -p udp -j ACCEPT 
-A INPUT -i virbr1 -p tcp -j ACCEPT 
-A INPUT -m state --state NEW -m tcp -p tcp --dport 22 -s 148.88.67.50 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
COMMIT
